adding serach by post functionality

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,7 +13,7 @@ html
 					li
 						a(href = '/post/add') Add Post
 					li
-						a(href = '/categories/add') Categories
+						a(href = '/categories/add') Add Categories
 			!= messages()
 			block content
 			footer
