--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,6 +43,7 @@ nav{
 	height:40px;
 	padding:20px 0 0 10px;
 	font-size:18px;
+	margin-bottom:20px;
 }
 
 nav li{
@@ -83,6 +84,10 @@ a.more{
 	padding-bottom:20px;
 }
 
+.post img{
+	width: 100%;
+}
+
 label{
 	display:inline-block;
 	width:180px;
@@ -107,6 +112,46 @@ textarea{
 	height:70px;
 	width:400;
 }
+.alert{
+	padding : 15px;
+	margin-bottom: 20px;
+	border: 1px solid transparent;
+	border-radius: 4px;
+	list-style: none;
+}
+
+.alert-danger{
+	color: #a94442;
+	background-color: #f2dede;
+	border-color: #ebccd1;
+}
+
+ul.success li {
+	padding: 15px;
+	margin-top: 10px;
+	margin-bottom: 20px;
+	border: 1px solid transparent;
+	border-radius: 4px;
+	color: #3c763d;
+	background-color: #dff0d8;
+	border-color: #d6e9c6;
+	list-style: none;
+}
+
+footer {
+	margin-top:40px;
+	text-align: center;
+	height: 30px;
+	border-top;1px solid #ccc;
+}
+
+
+
+
+
+
+
+
 
 
 
